# amocrm-api

./: .env.example  .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
amocrm/v4/: amoCRM.py  amoCRM_filter.py  amoCRM_utils.py
amocrm/v4/errors/: amoCRM_E.py
amocrm/v4/models/: amoCRM_M.py
